# dart-bindgen

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  bindgen.code-workspace
bindgen/: pubspec.yaml
bindgen/lib/: bindgen.dart  loaders.dart
bindgen/lib/loaders/: clang.dart  loader.dart
bindgen/lib/src/: bindgen.dart  code_buffer.dart  codegen.dart  declaration.dart  exception.dart  helpers.dart  library.dart  parser.dart  types.dart
bindgen/test/: e2e.sh  test_helper.dart
bindgen/test/e2e/: booleans_test.dart  enums_test.dart  generated_library.dart  hello_world_test.dart  multipart_test.dart  primitives_test.dart  structs_test.dart
bindgen/test/fixtures/: CMakeLists.txt
bindgen/test/fixtures/src/: booleans.c  booleans.h  enums.c  enums.h  hello.c  hello.h  multipart.c  multipart.h  primitives.c  primitives.h  structs.c  structs.h
bindgen/test/fixtures/src/multipart/: address.h  person.h
clang_plugin/: CMakeLists.txt
clang_plugin/cmake/: FindLibClang.cmake
clang_plugin/src/: exceptions.c  exceptions.h  helpers.c  helpers.h  plugin.c
clang_plugin/src/visitors/: enum.c  function.c  struct.c  type.c  visitor.c  visitors.h
dlopen/: README.md  pubspec.yaml
dlopen/lib/: dlopen.dart
dlopen/lib/src/: dlclose.dart  dlopen.dart  exception.dart
dlopen/test/: dlopen_test.dart  test_helper.dart
dlopen/test/fixtures/: crypto.c
dlopen/test/modules/: crypto.dart  curl.dart
